src/objects/Timer_Log__c.object
<CustomObject>
    <description>this object is used to keep track of the start &amp; stop time of the tracker</description>
    <fields>
        <fullName>Ended_At__c</fullName>
        <label>Ended At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hours_Calculated__c</fullName>
        <formula>(floor(( Ended_At__c -  Started_At__c  )*24))
+
((((( Ended_At__c -Started_At__c)*24)-floor((Ended_At__c - Started_At__c)*24))*60)/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Calculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Started_At__c</fullName>
        <label>Started At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Entry__c</fullName>
        <label>Time Entry</label>
        <referenceTo>Time_Entry__c</referenceTo>
        <relationshipLabel>Timer Log</relationshipLabel>
        <relationshipName>Timer_Log</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Timer Log</label>
    <nameField>
        <displayFormat>TL-{0000000}</displayFormat>
        <label>Timer Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timer Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>